--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
 	"prefix": "!",
-	"token": "NjkzNDg2NzQ3NDY3Nzc2MDkx.Xn-Fhg.UY3m5EENwMr4uLEXu_s51D3ftfk"
+	"token": "NjkzNDg2NzQ3NDY3Nzc2MDkx.XoDKbg.Tm2TWTFWzlCBNBnf9BNUJHFmBI8"
 }
