--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
 	"prefix": "!",
-	"token": "NjkzNDg2NzQ3NDY3Nzc2MDkx.XoDKbg.Tm2TWTFWzlCBNBnf9BNUJHFmBI8"
+	"token": "NjkzNDg2NzQ3NDY3Nzc2MDkx.XoDO8A.4jXbva_1Sj9KV_XcV6wLtcCv__4"
 }
